src/widgets/snapshots/tvision__widgets__terminal__tests__draw_with_lines.snap
---
source: src/widgets/terminal.rs
expression: "render_terminal(&mut t, 20, 5)"
---
size: 20x5
cursor: hidden
text:
|hello               |
|world               |
|foo                 |
|                    |
|                    |
attr:
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(8) bg=BIOS(2)
